--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -26,4 +26,4 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest --maxfail=1 --disable-warnings -v
+        pytest --maxfail=1 --disable-warnings -v --tb=short --color=yes
